# ssb-timeseries

./: .cookiecutter.json  .cruft.json  .darglint  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL.md  README.md  SECURITY.md  delete-sample-data.sh  demo.ipynb  info-model.md  noxfile.py  pyproject.toml  pythonpath.sh  sonar-project.properties  structure.md  workflow.md
.github/: release-drafter.yml
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: architecture.md  changelog.md  conf.py  configure-io.md  configure-logging.md  howto-configure-storage.md  index.md  info-model.md  model.md  quickstart.md  reference.md  ssb_timeseries.rst  structure.md  workflow.md
docs/reference/: index.rst  ssb_timeseries.catalog.rst  ssb_timeseries.config.rst  ssb_timeseries.dataframes.rst  ssb_timeseries.dataset.rst  ssb_timeseries.dates.rst  ssb_timeseries.fs.rst  ssb_timeseries.io.fs.rst  ssb_timeseries.io.json_helpers.rst  ssb_timeseries.io.json_metadata.rst  ssb_timeseries.io.parquet_schema.rst  ssb_timeseries.io.protocols.rst  ssb_timeseries.io.pyarrow_hive.rst  ssb_timeseries.io.pyarrow_simple.rst  ssb_timeseries.io.rst  ssb_timeseries.io.snapshot.rst  ssb_timeseries.logging.rst  ssb_timeseries.meta.rst  ssb_timeseries.properties.rst  ssb_timeseries.sample_data.rst  ssb_timeseries.sample_metadata.rst  ssb_timeseries.types.rst
docs/ssb_static/: ssb.css
examples/: test_lagring.ipynb  test_stuff.ipynb  test_tidsversjonering.ipynb
src/ssb_timeseries/: __init__.py  __main__.py  catalog.py  config.py  dataframes.py  dataset.py  dates.py  fs.py  intervals.py  io.py  logging.py  meta.py  properties.py  sample_data.py  sample_metadata.py  setup.py  types.py
src/ssb_timeseries/io/: __init__.py  fs.py  json_helpers.py  json_metadata.py  parquet_schema.py  protocols.py  pyarrow_hive.py  pyarrow_simple.py  simple.py  snapshot.py
src/ssb_timeseries/meta/: __init__.py  formatters.py  loaders.py  tags.py  taxonomy.py
src/timeseries/: __init__.py  __main__.py  config.py  dataset.py  dates.py  demo.ipynb  fs.py  io.py  logging.py  meta.py  properties.py  sample_data.py  sample_metadata.py  setup.py
tests/: __init__.py  conftest.py  test_catalog.py  test_config.py  test_dataframes.py  test_dataset_algebra.py  test_dataset_core.py  test_dataset_plotting.py  test_dataset_sharing.py  test_dataset_time.py  test_dates.py  test_fs.py  test_functions.py  test_intervals.py  test_io.py  test_logging.py  test_main.py  test_meta.py  test_meta_catalog.py  test_meta_tag_maintenance.py  test_meta_tag_search_and_calculation.py  test_meta_tagging.py  test_meta_taxonomy.py  test_sample_data.py  test_types.py
tests/dataset/: test_dataset_algebra.py  test_dataset_compatibility.py  test_dataset_core.py  test_dataset_time.py
tests/io/: test_io.py  test_json_helpers.py  test_json_metadata.py  test_parquet_schema.py  test_persisting.py  test_pyarrow_hive.py  test_pyarrow_simple.py  test_simple.py
tests/meta/: __init__.py  test_loaders.py  test_search.py  test_tags.py  test_taxonomy.py
tests/timeseries/: conftest.py  test_config.py  test_dataset.py  test_dataset_algebra.py  test_dataset_core.py  test_dataset_meta.py  test_dataset_sharing.py  test_dataset_time.py  test_dates.py  test_fs.py  test_io.py  test_meta.py  test_meta_tagging.py  test_meta_taxonomy.py  test_sample_data.py
