[tool.poetry]
name = "arkitektur-poc-tidsserier"
version = "0.1.0"
description = ""
authors = ["Bernhard Ryeng <'rye@ssb.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dapla-toolbelt = ">=1.3.2"
pandas = "^2.1.1"
pytest = "^7.4.3"
ssb-klass-python = "^0.0.7"
pyarrow = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
ipykernel = ">=6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

